01_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    
#apiVersion: v1
#kind: Pod
#metadata:
#  name: my-pod
#  namespace: default
#  labels:
#    name: nginx
#spec:
#  containers:
#    - name: nginx
#      image: nginx
#      ports:
#        - containerPort: 80
