08_ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            backend:
              serviceName: my-service-node-port
              servicePort: 80
